--- a/api/qsharp/microsoft.quantum.arrays.swapped.yml
+++ b/api/qsharp/microsoft.quantum.arrays.swapped.yml
@@ -25,7 +25,7 @@ output:
   content: "'T[]"
   types:
   - summary: >-
-      应用了就地 swapp 的数组。
+      应用了就地交换的数组。
 
 
       ## <a name="example"></a>示例
@@ -42,9 +42,9 @@ output:
     uid: "'T"
     isLocal: true
 metadata:
-  ms.openlocfilehash: 0ded9daa145265924c29c28a192092db939ac452
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 0f87061e3f3ef2a310df6a6bdc8c65619356406a
+  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82680791"
+  ms.lasthandoff: 07/02/2020
+  ms.locfileid: "85884625"
