--- a/api/qsharp/microsoft.quantum.errorcorrection.syndromemeasop.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.syndromemeasop.yml
@@ -5,7 +5,7 @@ type: newtype
 namespace: Microsoft.Quantum.ErrorCorrection
 summary: 表示一个操作，该操作用于测量纠错代码块的症状。
 remarks: >-
-  签名`(LogicalRegister => Syndrome)`表示一项操作，该操作与中`LogicalRegister`的 qubits 联合，一些辅助 qubits 后跟辅助 qubits 的度量，以提取表示`Syndrome` `Result[]`这些度量值的值。
+  签名 `(LogicalRegister => Syndrome)` 表示一项操作，该操作与中的 qubits 联合 `LogicalRegister` ，一些辅助 qubits 后跟辅助 qubits 的度量，以提取 `Syndrome` 表示这些度量值的值 `Result[]` 。
 
 
   ### <a name="examples"></a>示例
@@ -24,9 +24,9 @@ seeAlso:
 - logicalregister
 - syndrome
 metadata:
-  ms.openlocfilehash: aa324e8e149ba9418082145ed982236c473c1a4d
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e4c011bcbe4200fe894962e0432f4c5c358d0295
+  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684827"
+  ms.lasthandoff: 07/02/2020
+  ms.locfileid: "85885753"
