--- a/api/qsharp/Microsoft.Quantum.Intrinsic.yml
+++ b/api/qsharp/Microsoft.Quantum.Intrinsic.yml
@@ -6,9 +6,9 @@ functions:
   summary: 在日志中记录消息。
 operations:
 - uid: microsoft.quantum.intrinsic.assert
-  summary: 度量给定 Pauli 基础中给定 qubits 的断言将始终具有给定的结果。
+  summary: "\n> [!WARNING]\n> 已放弃\n\n已弃用断言。 请改用 @\"microsoft.quantum.diagnostics.assertmeasurement\"。"
 - uid: microsoft.quantum.intrinsic.assertprob
-  summary: 在给定 Pauli 基础上测量给定 qubits 的断言在某种程度上具有给定概率的给定结果。
+  summary: "\n> [!WARNING]\n> 已放弃\n\nAssertProb 已被弃用。 请改用 @\"microsoft.quantum.diagnostics.assertmeasurementprobability\"。"
 - uid: microsoft.quantum.intrinsic.ccnot
   summary: 将双向受控– NOT （CCNOT）入口应用到三个 qubits。
 - uid: microsoft.quantum.intrinsic.cnot
@@ -16,7 +16,7 @@ operations:
     将受控-NOT （CNOT-CONTAINS）入口应用于一对 qubits。
 
 
-    \begin{align} \operatorname{CNOT} \mathrel{： =} \begin{bmatrix} 1 & 0 & 0 & 0 \\ \\ 0 & 1 & 0 & \\ \\ 0 0 & 0 & 0 & 1 \\ \\ 0 & 0 & 1 & 0 \end{bmatrix}，\end{align}
+    \begin{align} \operatorname{CNOT} \mathrel{： =} \begin{bmatrix} 1 & 0 & 0 & 0 \\ \\ 0 & 1 & 0 & 0 \\ \\ 0 & 0 & 0 & 1 \\ \\ 0 & 0 & 1 & 0 \end{bmatrix}，\end{align}
 
 
     行和列的排序顺序，如量程概念指南中所示。
@@ -25,19 +25,19 @@ operations:
     应用多 qubit Pauli 运算符的幂。
 
 
-    \begin{align} e ^ {i \theta [P_0 \otimes P_1 \cdots P_ {N-1}]}，\end{align}，其中 $P _i $ 是的 $i $ th 元素`paulis`，其中 $N = $`Length(paulis)`。
+    \begin{align} e ^ {i \theta [P_0 \otimes P_1 \cdots P_ {N-1}]}，\end{align}，其中 $P _i $ 是的 $i $ th 元素 `paulis` ，其中 $N = $ `Length(paulis)` 。
 - uid: microsoft.quantum.intrinsic.expfrac
   summary: >-
     使用由 dyadic 分式给定的自变量对 qubit Pauli 运算符应用指数。
 
 
-    \begin{align} e ^ {i \pi k [P_0 \otimes P_1 \cdots P_ {N-1}]/2 ^ N}，\end{align} 其中 $P _i $ 是的 $i $ th 元素`paulis`，其中 $N = $。`Length(paulis)`
+    \begin{align} e ^ {i \pi k [P_0 \otimes P_1 \cdots P_ {N-1}]/2 ^ N}，\end{align} 其中 $P _i $ 是的 $i $ th 元素 `paulis` ，其中 $N = $ `Length(paulis)` 。
 - uid: microsoft.quantum.intrinsic.h
   summary: >-
     将 Hadamard 转换应用于单个 qubit。
 
 
-    \begin{align} H \mathrel{： =} \frac{1}{\sqrt{2}} \begin{bmatrix} 1 & 1 \\ \\ 1 &-1 \end{bmatrix}。
+    \begin{align} H \mathrel{： =} \frac {1} {\sqrt {2} } \begin{bmatrix} 1 & 1 \\ \\ 1 &-1 \end{bmatrix}。
 
     \end{align}
 - uid: microsoft.quantum.intrinsic.i
@@ -55,18 +55,18 @@ operations:
     对指定的 Pauli 中的一个或多个 qubits 执行联合度量。
 
 
-    此分发提供的输出结果为： \begin{align} \Pr （\texttt{Zero} | \ket{\psi}） = \frac12 \braket{\psi \mid | \left （\boldone + P_0 \otimes P_1 \otimes \cdots \otimes P_ {N-1} \right） \mid | \psi}，\end{align}，其中 $P _i $ 是的 $i $ th 元素`bases`，其中 $N = \texttt{Length} （\texttt{bases}） $。
+    此分发提供的输出结果为： \begin{align} \Pr （\texttt{Zero} | \ket{\psi}） = \frac12 \braket{\psi \mid | \left （\boldone + P_0 \otimes P_1 \otimes \cdots \otimes P_ {N-1} \right） \mid | \psi}，\end{align}，其中 $P _i $ 是的 $i $ th 元素 `bases` ，其中 $N = \texttt{Length} （\texttt{bases}） $。
 
-    也就是说，度量返回`Result` $d $，以使观察到的度量值的 eigenvalue 为 $ （-1） ^ d $。
+    也就是说，度量返回 $d $，以使 `Result` 观察到的度量值的 eigenvalue 为 $ （-1） ^ d $。
 - uid: microsoft.quantum.intrinsic.r
   summary: >-
     应用围绕给定 Pauli 轴的旋转。
 
 
-    \begin{align} R_ {\mu} （\theta） \mathrel{： =} e ^ {-i \theta \ sigma_ {\mu}/2}，\end{align}，其中，$ \{\Mu \in i，X，Y\}，Z $。
+    \begin{align} R_ {\mu} （\theta） \mathrel{： =} e ^ {-i \theta \ sigma_ {\mu}/2}，\end{align}，其中，$ \mu \in \{ i，X，Y，Z \} $。
 - uid: microsoft.quantum.intrinsic.r1
   summary: >-
-    按给定角度对 $ \ket{1}$ 状态应用旋转。
+    {1}按给定角度对 $ \ket $ 状态应用旋转。
 
 
     \begin{align} R_1 （\theta） \mathrel{： =} \operatorname{diag} （1，e ^ {i\theta}）。
@@ -74,7 +74,7 @@ operations:
     \end{align}
 - uid: microsoft.quantum.intrinsic.r1frac
   summary: >-
-    通过指定为 dyadic 分数的角度{1}，将关于 $ \ket $ 状态的旋转。
+    {1}通过指定为 dyadic 分数的角度，将关于 $ \ket $ 状态的旋转。
 
 
     \begin{align} R_1 （n，k） \mathrel{： =} \operatorname{diag} （1，e ^ {i \pi k/2 ^ n}）。
@@ -84,10 +84,10 @@ operations:
 
     > [!WARNING]
 
-    > 此操作使用**相反**的符号约定@"microsoft.quantum.intrinsic.r"，不包括中的 $ 1/2 $ 的因子。 @"microsoft.quantum.intrinsic.r1"
+    > 此操作使用**相反**的符号约定，不包括中的 @"microsoft.quantum.intrinsic.r" $ 1/2 $ 的因子 @"microsoft.quantum.intrinsic.r1" 。
 - uid: microsoft.quantum.intrinsic.random
   summary: >-
-    随机操作采用双精度数组作为输入，并将随机选择的索引作为返回到数组中`Int`。
+    随机操作采用双精度数组作为输入，并将随机选择的索引作为返回到数组中 `Int` 。
 
     选择特定索引的概率与该索引处数组元素的值成正比。
 
@@ -101,16 +101,16 @@ operations:
     通过指定为 dyadic 分数的角度，对给定 Pauli 轴进行旋转。
 
 
-    \begin{align} R_ {\mu} （n，k） \mathrel{： =} e ^ {i \pi n \ sigma_ {\mu}/2 ^ k}，\end{align} 其中，$ \mu \{\in i，X，Y，\}Z $。
+    \begin{align} R_ {\mu} （n，k） \mathrel{： =} e ^ {i \pi n \ sigma_ {\mu}/2 ^ k}，\end{align} 其中，$ \mu \in \{ i，X，Y，Z \} $。
 
 
     > [!WARNING]
 
-    > 此操作使用中**opposite** @"microsoft.quantum.intrinsic.r"的相反符号约定。
+    > 此操作使用中的**相反**符号约定 @"microsoft.quantum.intrinsic.r" 。
 - uid: microsoft.quantum.intrinsic.rx
-  summary: "按给定角度向 $x $ 轴旋转。\n\n\\begin{align} R_x （\\theta） \\mathrel{： =} e ^ {-i \\theta \\ sigma_x/2} = \\begin{bmatrix} \\cos \\frac{\\theta}{2} &-i\\sin \\frac{\\theta}{2} \\\\ \\\\ -i\\sin \\frac{\\theta}{2} & \\cos \\frac{\\theta}{2} \\end{bmatrix}。  \n\\end{align}"
+  summary: "按给定角度向 $x $ 轴旋转。\n\n\\begin{align} R_x （\\theta） \\mathrel{： =} e ^ {-i \\theta \\ sigma_x/2} = \\begin{bmatrix} \\cos \\frac{\\theta} {2} &-i\\sin \\frac{\\theta} {2} \\\\ \\\\ -i\\sin \\frac{\\theta} {2} & \\cos \\frac{\\theta} {2} \\end{bmatrix}。  \n\\end{align}"
 - uid: microsoft.quantum.intrinsic.ry
-  summary: "按给定角度向 $y $ 轴旋转。\n\n\\begin{align} R_y （\\theta） \\mathrel{： =} e ^ {-i \\theta \\ sigma_y/2} = \\begin{bmatrix} \\cos \\frac{\\theta}{2} &-\\sin \\frac{\\theta}{2} \\\\ \\\\ \\sin \\frac{\\theta}{2} & \\cos \\frac{\\theta}{2} \\end{bmatrix}。  \n\\end{align}"
+  summary: "按给定角度向 $y $ 轴旋转。\n\n\\begin{align} R_y （\\theta） \\mathrel{： =} e ^ {-i \\theta \\ sigma_y/2} = \\begin{bmatrix} \\cos \\frac{\\theta} {2} &-\\sin \\frac{\\theta} {2} \\\\ \\\\ \\sin \\frac{\\theta} {2} & \\cos \\frac{\\theta} {2} \\end{bmatrix}。  \n\\end{align}"
 - uid: microsoft.quantum.intrinsic.rz
   summary: >-
     按给定角度向 $z $ 轴旋转。
@@ -120,13 +120,7 @@ operations:
 
     \end{align}
 - uid: microsoft.quantum.intrinsic.s
-  summary: >-
-    将π/4 阶段入口应用于单个 qubit。
-
-
-    \begin{align} S \mathrel{： =} \begin{bmatrix} 1 & 0 \\ \\ 0 & i \end{bmatrix}。
-
-    \end{align}
+  summary: 将 S 入口应用于单个 qubit。
 - uid: microsoft.quantum.intrinsic.swap
   summary: >-
     将交换入口应用于一对 qubits。
@@ -137,13 +131,7 @@ operations:
 
     行和列的排序顺序，如量程概念指南中所示。
 - uid: microsoft.quantum.intrinsic.t
-  summary: >-
-    将π/8 门应用于单个 qubit。
-
-
-    \begin{align} T \mathrel{： =} \begin{bmatrix} 1 & 0 \\ \\ 0 & e ^ {i \pi/4} \end{bmatrix}。
-
-    \end{align}
+  summary: 将 T 入口应用于单个 qubit。
 - uid: microsoft.quantum.intrinsic.x
   summary: >-
     将 Pauli $X $ 入口。
@@ -169,9 +157,9 @@ operations:
 
     \end{align}
 metadata:
-  ms.openlocfilehash: 303e6d0376841672b9c8dbd3d8bd47ff7b24916a
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: c0be1da035393f32fa2949214d79ecb8a4c5ccb3
+  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82673227"
+  ms.lasthandoff: 07/02/2020
+  ms.locfileid: "85885226"
