--- a/api/qsharp/microsoft.quantum.diagnostics.enabletestingvianame.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.enabletestingvianame.yml
@@ -3,12 +3,12 @@ uid: microsoft.quantum.diagnostics.enabletestingvianame
 name: EnableTestingViaName
 type: newtype
 namespace: Microsoft.Quantum.Diagnostics
-summary: 编译器可识别的属性，可通过该属性定义可在加载类型时使用的可选名称，或可调用以用于测试目的。
+summary: 编译器可识别的属性，通过该属性可以定义可在加载类型时使用的可选名称，也可以将其用于测试目的。
 syntax: newtype EnableTestingViaName = String;
 metadata:
-  ms.openlocfilehash: 7887df093b51d9e525adda1860361ea649106cb2
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 769df7a097ddbd49877b72369cd2e72a27e2058c
+  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82706663"
+  ms.lasthandoff: 07/02/2020
+  ms.locfileid: "85885769"
