--- a/api/qsharp/microsoft.quantum.intrinsic.assertprob.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.assertprob.yml
@@ -3,42 +3,26 @@ uid: microsoft.quantum.intrinsic.assertprob
 name: AssertProb
 type: operation
 namespace: Microsoft.Quantum.Intrinsic
-summary: 在给定 Pauli 基础上测量给定 qubits 的断言在某种程度上具有给定概率的给定结果。
-remarks: 请注意，此操作的 Adjoint 和受控版本将不检查该条件。
-examples: >-
-  ```qsharp
-
-  using (register = Qubit()) {
-      H(register);
-      AssertProb([PauliZ], [register], One, 0.5,
-          "Measuring in conjugate basis did not give 50/50 results.", 1e-5);
-  }
-
-  ```
+summary: AssertProb 已被弃用。 请改用 @"microsoft.quantum.diagnostics.assertmeasurementprobability"。
 syntax: 'operation AssertProb (bases : Pauli[], qubits : Qubit[], result : Result, prob : Double, msg : String, tol : Double) : Unit'
 input:
   content: '(bases : Pauli[], qubits : Qubit[], result : Result, prob : Double, msg : String, tol : Double)'
   types:
   - name: bases
-    summary: 用于断言概率的度量效果，表示为多 qubit Pauli 运算符。
     isArray: true
     isPrimitive: true
     uid: Pauli
   - name: qubits
-    summary: 要对其进行断言的寄存器。
     isArray: true
     isPrimitive: true
     uid: Qubit
   - name: result
-    summary: 的预期结果`Measure(bases, qubits)`。
     isPrimitive: true
     uid: Result
   - name: prob
-    summary: 给定结果预计的概率。
     isPrimitive: true
     uid: Double
   - name: msg
-    summary: 断言失败时要报告的消息。
     isPrimitive: true
     uid: String
   - name: tol
@@ -52,12 +36,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-seeAlso:
-- assert
 metadata:
-  ms.openlocfilehash: 6317476e89feb3a5fecac15afd52541859fc2f21
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: db29d52b79b1e7b5a980f3e3196c5b2547132103
+  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674161"
+  ms.lasthandoff: 07/02/2020
+  ms.locfileid: "85885718"
