--- a/api/qsharp/toc.yml
+++ b/api/qsharp/toc.yml
@@ -273,7 +273,7 @@
       uid: microsoft.quantum.arrays.tail
     - name: TupleArrayAsNestedArray
       uid: microsoft.quantum.arrays.tuplearrayasnestedarray
-    - name: Where
+    - name: 其中
       uid: microsoft.quantum.arrays.where
     - name: Zip
       uid: microsoft.quantum.arrays.zip
@@ -292,7 +292,7 @@
       uid: microsoft.quantum.bitwise.leftshiftedl
     - name: Not
       uid: microsoft.quantum.bitwise.not
-    - name: Or
+    - name: 或
       uid: microsoft.quantum.bitwise.or
     - name: Parity
       uid: microsoft.quantum.bitwise.parity
@@ -1426,7 +1426,7 @@
       uid: microsoft.quantum.math.iscoprimel
     - name: Lg
       uid: microsoft.quantum.math.lg
-    - name: Log
+    - name: 日志
       uid: microsoft.quantum.math.log
     - name: Log10
       uid: microsoft.quantum.math.log10
